[package]
name = "casper-erc1155"
version = "0.1.0"
edition = "2018"
authors = ["Lucas Jovanovich @en0c-026"]
description = "A library for developing ERC1155 tokens for the Casper network."
readme = "README.md"
documentation = "https://docs.rs/casper-erc1155"
homepage = "https://casperlabs.io"
repository = "https://github.com/casper-ecosystem/erc1155"
license-file = "../LICENSE"

[dependencies]
base64 = { version = "0.13.0", default-features = false, features = ["alloc"] }
casper-contract = "1.3.2"
casper-types = "1.3.2"
hex = { version = "0.4.3", default-features = false }
once_cell = { version = "1.8.0", default-features = false }

[features]
default = ["std"]
std = ["casper-contract/std", "casper-types/std"]
