[package]
name = "erc1155-tests"
version = "0.1.0"
authors = ["Lucas Jovanovich @en0c-026"]
edition = "2018"

[dev-dependencies]
base64 = "0.13.0"
blake2 = "0.9.2"
casper-engine-test-support = { version = "1.3.2", features = ["test-support"] }
casper-erc1155 = { version = "0.1.0", features = ["std"], path = "../../erc1155" }
casper-types = { version = "1.3.2", features = ["std"] }
hex = "0.4.3"

[[bin]]
name = "erc1155-tests"
path = "src/integration_tests.rs"
bench = false
doctest = false
