[package]
name = "erc1155-token"
authors = ["Lucas Jovanovich @en0c-026"]
version = "0.1.0"
edition = "2018"

[dependencies]
casper-contract = "1.3.2"
casper-erc1155 = { path = "../../erc1155" }
casper-types = "1.3.2"

[[bin]]
name = "erc1155_token"
path = "src/main.rs"
bench = false
doctest = false
test = false
