[package]
name = "erc1155-test"
version = "0.1.0"
authors = ["Lucas Jovanovich @en0c-026"]
edition = "2018"

[[bin]]
name = "erc1155_test"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = "1.3.2"
casper-types = "1.3.2"
casper-erc1155 = { path = "../../erc1155" }

[features]
default = ["casper-contract/std", "casper-types/std", "casper-erc1155/std"]
